Regression: Using Bright/Contrast option on selected faces (paintmask) in Vertex Paint mode broken #103520

Closed
opened 2022-12-28 18:48:09 +01:00 by Louis · 10 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.62

Blender Version
Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: 55485cb379
Worked: version: 3.3.2, branch: master, commit date: 2022-12-07 12:12, hash: bd3a7b41e2

Caused by 12becbf0df

Short description of error
Using the Bright/Contrast function in Vertex Color mode with only selected faces (pressing M) no changes happen or glitches.

Exact steps for others to reproduce the error

  • Enter Edit Mode mode on selected mesh object
  • Select faces
  • Switch to Vertex Paint mode
  • Press M to be able to paint only on the selected faces
  • Go to Paint -> Bright/Contrast
  • Change the Brightness and Contrast values
  • Nothing happens. Sometimes it even affects random faces that are not selected.

In this example I try to deepen the brightness of the selected faces a bit:
image.png

But nothing happens to the faces. Instead, random vertices of unselected faces get darkened:
image.png

Here is the Blender file of the example:
VertexPaint_Bug.blend

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.62 **Blender Version** Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: `55485cb379` Worked: version: 3.3.2, branch: master, commit date: 2022-12-07 12:12, hash: bd3a7b41e2b3 Caused by 12becbf0df **Short description of error** Using the Bright/Contrast function in Vertex Color mode with only selected faces (pressing M) no changes happen or glitches. **Exact steps for others to reproduce the error** - Enter Edit Mode mode on selected mesh object - Select faces - Switch to Vertex Paint mode - Press M to be able to paint only on the selected faces - Go to *Paint -> Bright/Contrast* - Change the Brightness and Contrast values - > Nothing happens. Sometimes it even affects random faces that are not selected. In this example I try to deepen the brightness of the selected faces a bit: ![image.png](https://archive.blender.org/developer/F14097573/image.png) But nothing happens to the faces. Instead, random vertices of unselected faces get darkened: ![image.png](https://archive.blender.org/developer/F14097576/image.png) Here is the Blender file of the example: [VertexPaint_Bug.blend](https://archive.blender.org/developer/F14097580/VertexPaint_Bug.blend)
Author

Added subscriber: @LouisMiles

Added subscriber: @LouisMiles

#103519 was marked as duplicate of this issue

#103519 was marked as duplicate of this issue
Member

Added subscribers: @HooglyBoogly, @lichtwerk

Added subscribers: @HooglyBoogly, @lichtwerk
Member

Seems to be caused by 12becbf0df

CC @HooglyBoogly

Seems to be caused by 12becbf0df CC @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser changed title from Broken: Using Bright/Contrast option on selected faces in Vertex Paint mode to Regression: Using Bright/Contrast option on selected faces (paintmask) in Vertex Paint mode broken 2022-12-28 21:16:21 +01:00

Added subscriber: @russq

Added subscriber: @russq

I am also seeing this, but additionally if I turn OFF selected faces, as soon as I start adjusting levels, brightness, contrast, hue, etc. then selected faces gets automatically switched back on. So the buggy behavior described is unavoidable.

I am also seeing this, but additionally if I turn OFF selected faces, as soon as I start adjusting levels, brightness, contrast, hue, etc. then selected faces gets automatically switched back on. So the buggy behavior described is unavoidable.

Added subscriber: @Jasiek

Added subscriber: @Jasiek
Hans Goudey self-assigned this 2022-12-28 23:10:56 +01:00

This issue was referenced by 31f2242691

This issue was referenced by 31f22426915947f09751af8b5b92a2484de42163
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103520
No description provided.