Fix T103520: Incorrect selection in paint mode operators

Read the selection attribute on the proper domain using implicit
interpolation rather than just using its oiginal domain that might
not match the domain of the color attribute.